--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+1.1.55
+	Fixed API
+
+1.1.54
+	Quickfix-Stopped crossahairs from being dropped
+	Soft fixes problems with 1.9
+
 1.1.53
 	Added spas correctly.
 
