--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+1.1.121
+	Added fix for arm hits, so other players do not see the player's arm move on shoot (there is no way to remove the anmiation for the player shooting)	
+	Fixed recoil for 1.13. This new upgrade will now remove all jitters (another reason to update the server) Required protocol lib.
+	Added fix for gun duping while swapping to offhand
+
 1.1.120
 	Revamped Attachment code so it is the same as Guns. This will make handing guns with attachments easier.
 	Move QualityArmory API class to the "qg.api" package
